--- a/team/src/main/webapp/resources/css/task-properties-side.css
+++ b/team/src/main/webapp/resources/css/task-properties-side.css
@@ -1,19 +1,4 @@
-.task-test-btn {
-	width: 50px;
-	height: 50px;
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	z-index: 1;
-	background-image:
-		url("https://s1.daumcdn.net/cfs.tistory/custom/blog/204/2048858/skin/images/menu.png");
-	background-size: 50%;
-	background-repeat: no-repeat;
-	background-position: center;
-	cursor: pointer;
-}
-
-.task-close-btn {
+#task-close-btn {
 	width: 30px;
 	height: 52px;
 	position: absolute;
@@ -23,11 +8,11 @@
 	border-radius: 4px 0px 0px 4px;
 }
 
-.task-close-btn.open {
+#task-close-btn.open {
 	right: 598px;
 }
 
-#task-menu {
+#task-properties {
 	width: 600px;
 	height: 100%;
 	top: 15.2%;
@@ -36,27 +21,14 @@
 	z-index: 10;
 	background-color: white;
 	text-align: center;
-	transition: All 0.2s ease;
-	-webkit-transition: All 0.2s ease;
-	-moz-transition: All 0.2s ease;
-	-o-transition: All 0.2s ease;
+	transition: All 0.4s ease;
+	-webkit-transition: All 0.4s ease;
+	-moz-transition: All 0.4s ease;
+	-o-transition: All 0.4s ease;
 	box-shadow: -1px 6px 10px 0 rgba(0,0,0,.2);
 }
 
-#task-menu.open {
+#task-properties.open {
 	right: 0px;
 }
 
-.task-page_cover.open {
-	display: block;
-}
-
-.task-page_cover {
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	z-index: 4;
-	display: none;
-}
