--- a/team/src/main/webapp/resources/css/log-feedback.css
+++ b/team/src/main/webapp/resources/css/log-feedback.css
@@ -15,18 +15,21 @@ h6 { font-weight:bold !important; }
 	border: 1px #dedede;
     background-color: #dedede;
     border-radius: 30rem;
-    width: 115px; height: 32px;
+    width: 150px; height: 35px;
     text-align: center;
     margin-top: 2px;
 }
 .mem a {color:black;}
 .mem_img {
-	width: 30%; height:32px;
+	width: 37px;
+    border: 2px solid #939393;
+    height: 35px;
+	/* width: 30%; height:32px; */
 	border-radius: 30rem;
-	border: 1px solid;
+	/* border: 1px solid; */
 }
-.mem_name {width: 50%;}
-.mem_rm {width: 20%;}
+.mem_name {/* width: 50%; */ padding-top: 3px;padding-left: 5px;}
+.mem_rm {/* width: 20%; */width: 10;padding-left: 18px;padding-top: 3px;}
 .mem *, ._mem *, .t * {display:inline-block;float:left;}
 ._mem { height:50px;border:1px solid white;border-radius:.20rem;padding:5px; margin-bottom: 15px; }
 ._mem_name {width:60%;}
