--- a/team/src/main/webapp/resources/css/datetimepicker.css
+++ b/team/src/main/webapp/resources/css/datetimepicker.css
@@ -12,8 +12,8 @@
 .dtp_modal-content-no-time{ background-color: #fff; border-radius: 10px; width: 312px;
     position: absolute; z-index: 1000; top: 100px; left: 100px; font-size: 16px;font-weight: normal;}
 .dtp_modal-title{ border-bottom: solid 3px #01adff; padding: 16px 36px; margin-bottom: 16px;  font-size: 22px; }
-.dtp_modal-cell-date{ width: 312px;  float: right; margin-bottom: 22px; margin-top: 6px;}
-.dtp_modal-cell-time{width: 311px; float: left; direction: ltr; border-right: solid 1px #000;}
+.dtp_modal-cell-date{ width: 312px;  float: right; margin-bottom: 22px; margin-top: 6px; border-left: solid 1px #000;}
+.dtp_modal-cell-time{width: 311px; float: left; direction: ltr;}
 .dtp_modal-months{ color: #7d7d7d; text-align: center; font-size: 20px; padding: 0 20px;}
 .dtp_modal-months span{ display: inline-block; padding: 10px 20px; width: 182px;}
 .dtp_modal-calendar{ width: 266px; margin-left: 22px; }
@@ -23,8 +23,8 @@
 .dtp_modal-cell-selected{ background-color: #01adff; border-radius: 48%;  transition: background-color 1s ease-out;}
 .dtp_modal-time-block{ height: 212px; width: 310px; }
 .dpt_modal-button{ background-color: #01adff; color: #fff; font-size: 24px; padding: 8px 40px; float: left;
-    text-align: center; display: inline-block; margin-left: 22px; cursor: pointer; border: solid 1px #fff;
-border-radius: 3px;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
+    text-align: center; display: inline-block; margin-left: 17px; cursor: pointer; border: solid 1px #fff;
+border-radius: 3px;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); margin-top: 23px;}
 .dtp_modal-time-line{ text-align: center; color: #7d7d7d; font-size: 20px; padding-top: 15px;  }
 .dtp_modal-time-mechanic{ padding-top: 16px;}
 .dtp_modal-append{ color: #7d7d7d; padding-left: 108px; font-weight: normal; }
